--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -139,3 +139,23 @@
 body{
 	background:#c0c0c0;
 }
+.btn-round {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: blue;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-round span {
+  display: block;
+  font-size: 30px;
+  margin-top: 6px;
+  margin-left: 2px;
+}
