--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -74,11 +74,11 @@
     color: white;
 }
 #search_text:focus {
-    background: rgb(64, 151, 119);
+    background: rgb(227, 226, 246);
 }
 #search_button {
     border: 0 none;
-    background: #1f7f5c url(search.png) center no-repeat;
+    background-color: rgb(110,0,255);
     width: 60px;
     float: left;
     padding: 0;
