--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -135,6 +135,15 @@
 	padding: 1rem;
 }
 
+.analytics_connect {
+	margin: 2rem;
+	background: #fff;
+	border-radius: 10px;
+	box-shadow: var(--shadow);
+	padding: 1rem;
+	height: 600px;
+}
+
 .card {
 	background: #fff;
 	border-radius: 10px;
