--- a/WebContent/styleAjoutProduit.css
+++ b/WebContent/styleAjoutProduit.css
@@ -191,7 +191,7 @@ h1 {
 
 .cdd{
 	text-align : left ;
-	margin-right :100px;
+	margin-right :20px;
 	margin-top : 20px;
 	font-family: Montserrat, sans-serif;
 }
@@ -199,13 +199,13 @@ h1 {
 .dpt{
 	text-align : left;
 	margin-top : 20px;
-	margin-right :100px;
+	margin-right :20px;
 	font-family: Montserrat, sans-serif;
 }
 
 .dtcrea{
 	text-align : left ; 
-	margin-right :100px;
+	margin-right :20px;
 	margin-top : 20px;
 	font-family: Montserrat, sans-serif;
 	
@@ -214,20 +214,15 @@ h1 {
 .regle{
 	text-align : left;
 	margin-top : 20px;
-	margin-right :100px;
+	margin-right :20px;
 	font-family: Montserrat, sans-serif;
 }
 
-.btt{
-	text-align : left;
-	margin-right :100px;
-	margin-top : 20px;
-	font-family: Montserrat, sans-serif;
-}
+
 
 .fourn{
 	text-align : left;
-	margin-right :100px;
+	margin-right :20px;
 	margin-top : 20px;
 	font-family: Montserrat, sans-serif;
 }
@@ -277,6 +272,7 @@ table{
         font-family: Montserrat, sans-serif;
         margin-right :60px;
         margin-top : 40px;
+        margin-left : 40px;
       	}
    
 .btn_enfer span {
