--- a/WebContent/styleCalendrier.css
+++ b/WebContent/styleCalendrier.css
@@ -139,13 +139,15 @@ body{
 
 .button_square {
    width:60%;
-   height:100%;
+   height:40%;
    border:none;
    background-color: rgb(90,90,90);
    color:white;
    outline:none;
    transition:0.2s;
-   margin-top: 30 px;
+   text-align:center;
+   margin: 2 px;
+   margin-top:20 px;
   
 }
 
