--- a/WebContent/styleCalendrier.css
+++ b/WebContent/styleCalendrier.css
@@ -2,8 +2,8 @@
 
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
 .nav {
@@ -138,18 +138,18 @@ body{
 }
 
 .button_square {
-   width:60%;
-   height:40%;
+   width:200px;
+   height:50px;
    border:none;
    background-color: rgb(90,90,90);
    color:white;
    outline:none;
    transition:0.2s;
    text-align:center;
-   margin: 2 px;
-   margin-top:20 px;
+   margin-bottom:20px;
   
 }
+
 
 .button_square:hover {
   background-color: rgb(110,0,255);
@@ -173,6 +173,7 @@ html, body {
     height: 80%;
     background-color: rgb(118,118,118);
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    margin-bottom: 30px;
 }
 
 #enteteCld {
