--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -180,3 +180,46 @@ h1 {
   margin-top: 50px; /* Ajouter une marge de 50 pixels au-dessus du titre */
   font-family: Montserrat, sans-serif;
 }
+
+.btn_enfer {
+    	display: inline-block;
+    	background-color: rgb(110,0,255);
+       	border-radius: 10px;
+  	  	border: 4px double #cccccc;
+     	color: #eeeeee;
+   		text-align: center;
+   		font-size: 11px;
+   		padding: 10px;
+      	width: 100px;
+        transition: all 0.5s;
+   		cursor: pointer;
+        margin: 5px;
+        font-family: Montserrat, sans-serif;
+        margin-top : 0px;
+        margin-left : 70px;
+      	}
+   
+.btn_enfer span {
+	       		cursor: pointer;
+	       		display: inline-block;
+	       		position: relative;
+	       		transition: 0.5s;
+	     	}
+.btn_enfer span:after {
+	       		content: "\00bb";
+	       		position: absolute;
+	       		opacity: 0;
+	       		top: 0;
+	       		right: -20px;
+	       		transition: 0.5s;
+	     	}
+.btn_enfer:hover {
+	       		background-color: #7F7F7F;
+	     	}
+.btn_enfer:hover span {
+	       		padding-right: 25px;
+	     	}
+.btn_enfer:hover span:after {
+	       		opacity: 1;
+	       		right: 0;
+	     	}
