--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -190,13 +190,14 @@ h1 {
    		text-align: center;
    		font-size: 11px;
    		padding: 10px;
-      	width: 100px;
+      	width: 130px;
         transition: all 0.5s;
    		cursor: pointer;
         margin: 5px;
         font-family: Montserrat, sans-serif;
+        font-weight:bold;
         margin-top : 0px;
-        margin-left : 70px;
+        margin-left : 50px;
       	}
    
 .btn_enfer span {
