--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -244,3 +244,17 @@ h1 {
   margin-top: 6px;
   margin-left: 2px;
 }
+
+.jiji{
+	display: flex;
+	justify-content: center;
+	font-family: Montserrat, sans-serif;
+	margin-top : 20px;
+	text-align: center;
+	
+}
+
+.popo{
+	width : 20 px;
+	
+}
