--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -258,3 +258,48 @@ h1 {
 	width : 20 px;
 	
 }
+
+.btn_co {
+    	display: flex;
+    	justify-content : center;
+    	background-color: rgb(110,0,255);
+       	border-radius: 10px;
+  	  	border: 4px double #cccccc;
+     	color: #eeeeee;
+   		text-align: center;
+   		font-size: 11px;
+   		padding: 10px;
+      	width: 130px;
+        transition: all 0.5s;
+   		cursor: pointer;
+        margin: 5px;
+        font-family: Montserrat, sans-serif;
+        font-weight:bold;
+        margin-top : 20px;
+        margin-left : 650px;
+      	}
+   
+.btn_co span {
+	       		cursor: pointer;
+	       		display: inline-block;
+	       		position: relative;
+	       		transition: 0.5s;
+	     	}
+.btn_co span:after {
+	       		content: "\00bb";
+	       		position: absolute;
+	       		opacity: 0;
+	       		top: 0;
+	       		right: -20px;
+	       		transition: 0.5s;
+	     	}
+.btn_co:hover {
+	       		background-color: #7F7F7F;
+	     	}
+.btn_co:hover span {
+	       		padding-right: 25px;
+	     	}
+.btn_co:hover span:after {
+	       		opacity: 1;
+	       		right: 0;
+	     	}
