avancement html page ajout employe et invetaire

--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -303,3 +303,54 @@ h1 {
 	       		opacity: 1;
 	       		right: 0;
 	     	}
+	     	
+.titre1{
+	font-family: Montserrat, sans-serif;
+	text-align : center;	
+}
+
+
+.btn_pln {
+    	display: flex;
+    	justify-content : center;
+    	background-color: rgb(110,0,255);
+       	border-radius: 10px;
+  	  	border: 4px double #cccccc;
+     	color: #eeeeee;
+   		text-align: center;
+   		font-size: 11px;
+   		padding: 10px;
+      	width: 130px;
+        transition: all 0.5s;
+   		cursor: pointer;
+        margin: 5px;
+        font-family: Montserrat, sans-serif;
+        font-weight:bold;
+        margin-top : 0px;
+        margin-left :700px;
+      	}
+   
+.btn_pln span {
+	       		cursor: pointer;
+	       		display: inline-block;
+	       		position: relative;
+	       		transition: 0.5s;
+	     	}
+.btn_pln span:after {
+	       		content: "\00bb";
+	       		position: absolute;
+	       		opacity: 0;
+	       		top: 0;
+	       		right: -20px;
+	       		transition: 0.5s;
+	     	}
+.btn_pln:hover {
+	       		background-color: #7F7F7F;
+	     	}
+.btn_pln:hover span {
+	       		padding-right: 25px;
+	     	}
+.btn_pln:hover span:after {
+	       		opacity: 1;
+	       		right: 0;
+	     	}
