--- a/WebContent/styleAjoutProduit.css
+++ b/WebContent/styleAjoutProduit.css
@@ -266,9 +266,8 @@ table{
    		cursor: pointer;
         margin: 5px;
         font-family: Montserrat, sans-serif;
-        margin-right :60px;
-        margin-top : 0px;
-        margin-left : 0px;
+        margin-top : 20px;
+        margin-left : 650px;
       	}
    
 .btn_enfer span {
@@ -355,3 +354,50 @@ table{
 	       		opacity: 1;
 	       		right: 0;
 	     	}
+	     	
+
+.btn_re {
+    	display: flex;
+    	justify-content : center;
+    	background-color: rgb(110,0,255);
+       	border-radius: 10px;
+  	  	border: 4px double #cccccc;
+     	color: #eeeeee;
+   		text-align: center;
+   		font-size: 11px;
+   		padding: 10px;
+      	width: 100px;
+        transition: all 0.5s;
+   		cursor: pointer;
+        margin: 5px;
+        font-family: Montserrat, sans-serif;
+        font-weight:bold;
+        margin-top : 20px;
+        margin-left : 650px;
+      	}
+   
+.btn_re span {
+	       		cursor: pointer;
+	       		display: inline-block;
+	       		position: relative;
+	       		transition: 0.5s;
+	     	}
+.btn_re span:after {
+	       		content: "\00bb";
+	       		position: absolute;
+	       		opacity: 0;
+	       		top: 0;
+	       		right: -20px;
+	       		transition: 0.5s;
+	     	}
+.btn_re:hover {
+	       		background-color: #7F7F7F;
+	     	}
+.btn_re:hover span {
+	       		padding-right: 25px;
+	     	}
+.btn_re:hover span:after {
+	       		opacity: 1;
+	       		right: 0;
+	     	}
+
