--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -11,6 +11,7 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
+    border-radius : 10px;
 }
 
 .nav li {
@@ -42,50 +43,61 @@
     line-height: 24px;
 }
 
-#search {
-    width: 357px;
-    margin: 4px;
+.search {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
 }
-#search_text{
-    width: 297px;
-    padding: 15px 0 15px 20px;
-    font-size: 16px;
-    font-family: Montserrat, sans-serif;
-    border: 0 none;
-    height: 52px;
-    margin-right: 0;
-    color: white;
-    outline: none;
-    background: #c0c0c0;
-    float: left;
-    box-sizing: border-box;
-    transition: all 0.15s;
+
+.search__input {
+  font-family: inherit;
+  font-size: inherit;
+  background-color: #f4f2f2;
+  border: none;
+  color: #646464;
+  padding: 0.7rem 1rem;
+  border-radius: 30px;
+  width: 12em;
+  transition: all ease-in-out .5s;
+  margin-right: -2rem;
 }
-::-webkit-input-placeholder { /* WebKit browsers */
-    color: white;
+
+.search__input:hover, .search__input:focus {
+  box-shadow: 0 0 1em #00000013;
 }
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    color: white;
+
+.search__input:focus {
+  outline: none;
+  background-color: #f0eeee;
 }
-::-moz-placeholder { /* Mozilla Firefox 19+ */
-    color: white;
+
+.search__input::-webkit-input-placeholder {
+  font-weight: 100;
+  color: #ccc;
 }
-:-ms-input-placeholder { /* Internet Explorer 10+ */
-    color: white;
+
+.search__input:focus + .search__button {
+  background-color: #f0eeee;
 }
-#search_text:focus {
-    background: rgb(227, 226, 246);
+
+.search__button {
+  border: none;
+  background-color: #f4f2f2;
+  margin-top: .1em;
 }
-#search_button {
-    border: 0 none;
-    background-color: rgb(110,0,255);
-    width: 60px;
-    float: left;
-    padding: 0;
-    text-align: center;
-    height: 52px;
-    cursor: pointer;
+
+.search__button:hover {
+  cursor: pointer;
 }
+
+.search__icon {
+  height: 1.3em;
+  width: 1.3em;
+  fill: #b4b4b4;
+}
+
+
 
 #options a{
     border-left: 0 none;
